<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/spacer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/spacer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/notifs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:minHeight="48dp"
            android:text="@string/allowNotifs"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spacer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/spacer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/irreversible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textSize="24sp" />

        <Button
            android:id="@+id/resetSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/resetSteps"
            android:textSize="20sp" />

        <Button
            android:id="@+id/deleteAcct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteAcct"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spacer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/spacer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Account"
            android:textSize="24sp" />

        <Button
            android:id="@+id/userChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userChange"
            android:textSize="20sp" />

        <Button
            android:id="@+id/passChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passChange"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signOut"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>